--- a/components/common/Combobox/combobox.module.css
+++ b/components/common/Combobox/combobox.module.css
@@ -1,24 +1,75 @@
-.combobox {}
+.combobox {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
 
-.combobox-input {}
+.combobox-input {
+  border-radius: 5px;
+  padding: 4px;
+  border: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-.combobox-clear {}
+.combobox-input input {
+  border: none;
+  outline: none;
+  height: 32px;
+  flex: 1;
+}
 
-.combobox-dropdown {}
+.combobox-clear {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  color: #a3aebc;
+  font-size: 14px;
+  cursor: pointer;
+  background: none;
+  flex: none;
+}
+
+.combobox-clear:hover {
+  background-color: #efefef;
+}
+
+.combobox-dropdown {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  cursor: pointer;
+  color: #a3aebc;
+  justify-content: center;
+  align-items: center;
+  flex: none;
+}
 
 .combobox-options {
-  background: red;
-  width: auto;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  padding: 0;
+  margin: 5px 0 0;
+  overflow-y: auto;
+  background-color: #fff;
+  border: 1px solid #ccc;
   list-style-type: none;
+  z-index:9999;
+  text-align:left;
 }
 
 .combobox-option {
-  padding: 5px;
-  margin-bottom: 5px;
-  background: green;
+  cursor: pointer;
+  padding: 8px 12px;
 }
 
 .combobox-option:hover {
-  background: blue;
-  cursor: pointer;
+  background-color: #f0f0f0;
 }
